k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aks-demo
  labels:
    app.kubernetes.io/name: aks-spring-demo
