k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-spring-demo
  namespace: aks-demo
  labels:
    app: aks-spring-demo
spec:
  type: LoadBalancer
  selector:
    app: aks-spring-demo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
